--- a/WChat/Base.lproj/Main.storyboard
+++ b/WChat/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ULS-xl-cPK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Welcome View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="welcome" id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="WChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeViewController" customModule="WChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -115,7 +115,7 @@
         <!--Phone Number Login View Controller-->
         <scene sceneID="hVi-mA-xp7">
             <objects>
-                <viewController id="ULS-xl-cPK" customClass="PhoneNumberLoginViewController" customModule="WChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="welcome" id="ULS-xl-cPK" customClass="PhoneNumberLoginViewController" customModule="WChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="V91-MT-dTT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -2329,20 +2329,20 @@ If you have any questions about these Terms, please contact us.
         </scene>
     </scenes>
     <resources>
-        <image name="answer" width="250" height="250"/>
+        <image name="answer" width="250.5" height="250.5"/>
         <image name="avatarPlaceholder" width="101" height="101"/>
-        <image name="call" width="30" height="30"/>
+        <image name="call" width="40" height="40"/>
         <image name="cameraIcon" width="80" height="80"/>
-        <image name="cancel" width="25" height="25"/>
-        <image name="chat" width="25" height="25"/>
-        <image name="hangup" width="249" height="249"/>
+        <image name="cancel" width="40" height="40"/>
+        <image name="chat" width="37.5" height="37.5"/>
+        <image name="hangup" width="249.5" height="249.5"/>
         <image name="logo" width="100" height="100"/>
-        <image name="message" width="30" height="30"/>
-        <image name="mute" width="250" height="250"/>
-        <image name="settings" width="25" height="25"/>
+        <image name="message" width="40" height="40"/>
+        <image name="mute" width="250.5" height="250.5"/>
+        <image name="settings" width="37.5" height="37.5"/>
         <image name="speaker" width="250" height="250"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Mvx-sW-6IK"/>
+        <segue reference="gyY-6n-bVp"/>
     </inferredMetricsTieBreakers>
 </document>
